--- a/ExcelLayer/ExcelLayer.csproj
+++ b/ExcelLayer/ExcelLayer.csproj
@@ -18,4 +18,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.Office.Interop.Excel">
+      <HintPath>..\..\PassagePlanner net 8\ExcelLayer\Microsoft.Office.Interop.Excel.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
