--- a/PassagePlanner/PassagePlanner.csproj
+++ b/PassagePlanner/PassagePlanner.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="C1.WPF.Maps" Version="9.0.20251.1069" />
     <PackageReference Include="MahApps.Metro" Version="2.4.10" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="MvvmLight.Threading" Version="5.4.1" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.5" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="8.1.2" />
